add mail script

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-LDAP="abc.123"
-PASSWORD="password"
-ROLL_NUMBER="B99AA999"
+LDAP=""
+PASSWORD=""
+ROLL_NUMBER=""
+MAIL_SENDER_ID=""
+MAIL_SENDER_PASSWORD=""
+MAIL_RECEIVER_ID=""
